[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Generic mocks built with mock-builder for traits"
edition = "2021"
license = "LGPL-3.0"
name = "cfg-mocks"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "0.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

cfg-primitives = { path = "../primitives", default-features = false }
cfg-traits = { path = "../traits", default-features = false }
cfg-types = { path = "../types", default-features = false }

xcm = { workspace = true }
orml-traits = { workspace = true }

mock-builder = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
  "cfg-primitives/std",
  "cfg-traits/std",
  "cfg-types/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "orml-traits/std",
  "xcm/std",
  "mock-builder/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "cfg-types/try-runtime",
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "sp-runtime/try-runtime",
]
