[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Primitive types for Centrifuge"
edition = "2021"
license = "LGPL-3.0"
name = "cfg-primitives"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

# substrate primitives dependencies
sp-arithmetic = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# substrate frame dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-collective = { workspace = true }

# cumulus primitives dependencies
cumulus-primitives-core = { workspace = true }

# XCM primitives dependencies
xcm = { workspace = true }
xcm-executor = { workspace = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "cumulus-primitives-core/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-collective/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-consensus-aura/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm-executor/std",
  "xcm/std",
]
runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-collective/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "xcm-executor/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-collective/try-runtime",
  "sp-runtime/try-runtime",
]
