[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Proofs"
edition = "2021"
license = "LGPL-3.0"
name = "proofs"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false, tag = "polkadot-v1.1.0" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", default-features = true, tag = "polkadot-v1.1.0" }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-std/std",
  "scale-info/std",
]
