[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Proofs"
edition = "2021"
license = "LGPL-3.0"
name = "proofs"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-std/std",
  "scale-info/std",
]
