[package]
name = "proofs"
description = "Proofs"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "sp-std/std",
  "scale-info/std",
]
