[package]
name = "cfg-test-utils"
version = "0.1.0"
edition = "2021"
authors = ["Centrifuge"]
homepage = "https://centrifuge.io"
license = "LGPL-3.0"
repository = "https://github.com/centrifuge/centrifuge-chain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cfg-primitives = { path = "../primitives", default-features = false }
cfg-traits = { path = "../traits", default-features = false }
cfg-types = { path = "../types", default-features = false }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { version = "1.0.119", default-features = false }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Optional dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.43" }

[features]
default = ["std"]
std = [
  "cfg-traits/std",
  "cfg-types/std",
  "cfg-primitives/std",
  "serde/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-benchmarking/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "cfg-types/try-runtime",
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "sp-runtime/try-runtime",
]
