[package]
name = "cfg-test-utils"
description = "Utilities for testing"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cfg-primitives = { workspace = true }
cfg-traits = { workspace = true }
cfg-types = { workspace = true }

parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Optional dependencies
frame-benchmarking = { workspace = true, optional = true }

# Used by impl_mock_registry macro internally
staging-xcm = { workspace = true }

[features]
default = ["std"]
std = [
  "cfg-traits/std",
  "cfg-types/std",
  "cfg-primitives/std",
  "serde/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "frame-benchmarking/std",
  "staging-xcm/std",
]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "cfg-primitives/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "cfg-types/try-runtime",
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "sp-runtime/try-runtime",
]
