[package]
name = "trait-crowdloan-reward"
authors = ['The Centrifugians Tribe']
edition = '2018'
homepage = 'https://centrifuge.io'
license = "LGPL-3.0"
repository = 'https://github.com/centrifuge/centrifuge-chain'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }
frame-support = { branch = "master", git = "https://github.com/centrifuge/substrate.git", default-features = false }
sp-runtime = { branch = "master", git = "https://github.com/centrifuge/substrate.git", default-features = false }
sp-std = { branch = "master", git = "https://github.com/centrifuge/substrate.git", default-features = false }