[package]
name = "cfg-traits"
authors = ["The Centrifugians Tribe"]
edition = "2021"
homepage = "https://centrifuge.io"
license = "LGPL-3.0"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cfg-primitives = { path = "../primitives", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
impl-trait-for-tuples = "0.2.1"
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

[dev-dependencies]
cfg-mocks = { path = "../mocks" }
cfg-types = { path = "../types" }
mock-builder = { path = "../../libs/mock-builder" }

[features]
default = ["std"]
runtime-benchmarks = [
  "cfg-primitives/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "cfg-mocks/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
  "mock-builder/runtime-benchmarks",
]
std = [
  "codec/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "cfg-primitives/std",
  "scale-info/std",
]
try-runtime = [
  "frame-support/try-runtime",
  "cfg-primitives/try-runtime",
  "sp-runtime/try-runtime",
  "mock-builder/try-runtime",
]
