[package]
name = "cfg-traits"
authors = ["The Centrifugians Tribe"]
edition = "2021"
homepage = "https://centrifuge.io"
license = "LGPL-3.0"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
cfg-primitives = { workspace = true }
frame-support = { workspace = true }
impl-trait-for-tuples = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
cfg-mocks = { workspace = true, default_features = true }
cfg-types = { workspace = true, default_features = true }
mock-builder = { workspace = true, default_features = true }

[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
  "frame-support/std",
  "sp-runtime/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "cfg-primitives/std",
  "scale-info/std",
  "strum/std",
]
runtime-benchmarks = [
  "cfg-primitives/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "cfg-mocks/runtime-benchmarks",
  "cfg-types/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
  "cfg-primitives/try-runtime",
  "sp-runtime/try-runtime",
]
