[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Common types for Centrifuge runtime"
edition = "2021"
license = "LGPL-3.0"
name = "cfg-types"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = { version = "1.3", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
hex-literal = { version = "0.3.4", default-features = false }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119" }

# substrate dependencies
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.43" }

orml-asset-registry = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v0.9.43" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.43" }

# local dependencies
cfg-primitives = { path = "../primitives", default-features = false }
cfg-traits = { path = "../traits", default-features = false }
cfg-utils = { path = "../utils", default-features = false }


[dev-dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = true, branch = "polkadot-v0.9.43" }
hex = { version = "0.4.3", default_features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "cfg-primitives/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-utils/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "orml-asset-registry/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "cfg-primitives/std",
  "cfg-traits/std",
  "cfg-utils/std",
  "codec/std",
  "frame-support/std",
  "orml-asset-registry/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm/std",
]
try-runtime = [
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "cfg-utils/try-runtime",
  "frame-support/try-runtime",
  "orml-asset-registry/try-runtime",
  "sp-runtime/try-runtime",
]
