[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Common types for Centrifuge runtime"
edition = "2021"
license = "LGPL-3.0"
name = "cfg-types"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = { version = "1.3", default-features = false }
hex-literal = { version = "0.3.4", default-features = false }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

# substrate dependencies
frame-support = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

orml-asset-registry = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, branch = "polkadot-v1.1.0" }
xcm = { package = "staging-xcm",  workspace = true }

# local dependencies
cfg-primitives = { path = "../primitives", default-features = false }
cfg-traits = { path = "../traits", default-features = false }
cfg-utils = { path = "../utils", default-features = false }

[dev-dependencies]
frame-support = { workspace = true, default-features = true }
hex = { version = "0.4.3", default_features = false }

[features]
default = ["std"]
runtime-benchmarks = [
  "cfg-primitives/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-utils/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "orml-asset-registry/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
std = [
  "cfg-primitives/std",
  "cfg-traits/std",
  "cfg-utils/std",
  "parity-scale-codec/std",
  "frame-support/std",
  "orml-asset-registry/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-runtime/std",
  "sp-std/std",
  "xcm/std",
]
try-runtime = [
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "cfg-utils/try-runtime",
  "frame-support/try-runtime",
  "orml-asset-registry/try-runtime",
  "sp-runtime/try-runtime",
]
