[package]
name = "cfg-types"
description = "Common types for Centrifuge runtime"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
bitflags = { workspace = true }
hex-literal = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

# substrate dependencies
frame-support = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

orml-asset-registry = { workspace = true }
orml-traits = { workspace = true }
staging-xcm = { workspace = true }

# local dependencies
cfg-primitives = { workspace = true }
cfg-traits = { workspace = true }
cfg-utils = { workspace = true }

[dev-dependencies]
frame-support = { workspace = true, default-features = true }
hex = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "cfg-primitives/std",
  "cfg-traits/std",
  "cfg-utils/std",
  "parity-scale-codec/std",
  "frame-support/std",
  "orml-asset-registry/std",
  "orml-traits/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-runtime/std",
  "sp-std/std",
  "staging-xcm/std",
]
runtime-benchmarks = [
  "cfg-primitives/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-utils/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "orml-asset-registry/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "cfg-primitives/try-runtime",
  "cfg-traits/try-runtime",
  "cfg-utils/try-runtime",
  "frame-support/try-runtime",
  "orml-asset-registry/try-runtime",
  "sp-runtime/try-runtime",
]
