[package]
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Utility functions for Centrifuge"
edition = "2021"
license = "LGPL-3.0"
name = "cfg-utils"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
hex = { version = "0.4.3", default_features = false }
pallet-aura = { workspace = true }
pallet-timestamp = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-consensus-aura = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "pallet-timestamp/std",
  "pallet-aura/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "sp-consensus-aura/std",
  "hex/std",
]

runtime-benchmarks = [
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]

try-runtime = [
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-timestamp/try-runtime",
  "sp-runtime/try-runtime",
]
