[package]
name = "pallet-anchors"
authors = ["Centrifuge <admin@centrifuge.io>"]
description = "Anchors pallet for runtime"
edition = "2021"
license = "LGPL-3.0"
repository = "https://github.com/centrifuge/centrifuge-chain"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { version = "1.0.119" }

cfg-traits = { path = "../../libs/traits", default-features = false }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# optional dependencies for benchmarking
cfg-utils = { path = "../../libs/utils", default-features = false, optional = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-aura = { workspace = true }

[dev-dependencies]
pallet-authorship = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-io = { workspace = true }

cfg-mocks = { path = "../../libs/mocks" }

[features]
default = ["std"]
runtime-benchmarks = [
  "cfg-mocks/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-utils/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "cfg-mocks/try-runtime",
  "cfg-traits/try-runtime",
  "cfg-utils/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-timestamp/try-runtime",
  "sp-runtime/try-runtime",
]
std = [
  "cfg-traits/std",
  "cfg-utils/std",
  "parity-scale-codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-aura/std",
  "pallet-timestamp/std",
  "pallet-balances/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
