[package]
name = "pallet-anchors"
description = "Anchors pallet for runtime"
version = "2.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }

cfg-traits = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# optional dependencies for benchmarking
cfg-utils = { workspace = true, optional = true }
frame-benchmarking = { workspace = true, optional = true }
pallet-aura = { workspace = true }

[dev-dependencies]
pallet-authorship = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = true }

cfg-mocks = { workspace = true, default-features = true }

[features]
default = ["std"]
std = [
  "cfg-traits/std",
  "cfg-utils/std",
  "parity-scale-codec/std",
  "frame-benchmarking/std",
  "frame-support/std",
  "frame-system/std",
  "pallet-aura/std",
  "pallet-timestamp/std",
  "pallet-balances/std",
  "scale-info/std",
  "serde/std",
  "sp-arithmetic/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
]
runtime-benchmarks = [
  "cfg-mocks/runtime-benchmarks",
  "cfg-traits/runtime-benchmarks",
  "cfg-utils/runtime-benchmarks",
  "frame-benchmarking/runtime-benchmarks",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "pallet-balances/runtime-benchmarks",
  "pallet-timestamp/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
]
try-runtime = [
  "cfg-mocks/try-runtime",
  "cfg-traits/try-runtime",
  "cfg-utils/try-runtime",
  "frame-support/try-runtime",
  "frame-system/try-runtime",
  "pallet-aura/try-runtime",
  "pallet-authorship/try-runtime",
  "pallet-balances/try-runtime",
  "pallet-timestamp/try-runtime",
  "sp-runtime/try-runtime",
]
